<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.DetailFavoriteActivity">

    <TextView
        android:id="@+id/username_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/detail_photo_favorite"
        app:layout_constraintEnd_toEndOf="@+id/detail_photo_favorite"
        app:layout_constraintStart_toStartOf="@+id/detail_photo_favorite" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_photo_favorite"
        tools:src="@tools:sample/avatars"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username_favorite"/>

    <TextView
        android:id="@+id/name_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/detail_photo_favorite"
        app:layout_constraintStart_toStartOf="@+id/detail_photo_favorite"
        app:layout_constraintTop_toBottomOf="@+id/detail_photo_favorite" />

    <TextView
        android:id="@+id/location_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/name_favorite"
        app:layout_constraintStart_toStartOf="@+id/name_favorite"
        app:layout_constraintTop_toBottomOf="@+id/name_favorite" />

    <TextView
        android:id="@+id/company_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/location_favorite"
        app:layout_constraintStart_toStartOf="@+id/location_favorite"
        app:layout_constraintTop_toBottomOf="@+id/location_favorite" />

    <TextView
        android:id="@+id/blog_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blog"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/company_favorite"
        app:layout_constraintStart_toStartOf="@+id/company_favorite"
        app:layout_constraintTop_toBottomOf="@+id/company_favorite" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/black"

        app:layout_constraintEnd_toEndOf="@+id/blog_favorite"
        app:layout_constraintStart_toStartOf="@+id/blog_favorite"
        app:layout_constraintTop_toBottomOf="@+id/blog_favorite"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="373dp"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>